# MisinfoWatcher

./: .dockerignore  .gitignore  Dockerfile  README.md  article-scraper.py  config.json  pyproject.toml  requirements.txt
.github/workflows/: azure-static-web-apps-yellow-pebble-00e67e50f.yml
api/: __init__.py  article_classifier.py  main.py  model.py  ner_model.py  summary_model.py
crawlers/: 4chan_crawler.py  8chan_crawler.py  __init__.py
frontend/: README.md
frontend/public/: index.html
frontend/src/: App.css  App.js  SearchBar.js  SearchResults.js  index.css
naive_bayes/: ArticleClassifier.ipynb  NER_Test.ipynb  naive_bayes_classifier.py
naive_bayes/datasets/: Misinformation_Data_v1.csv
notebooks/: ArticleClassifier.ipynb  FastBERT.ipynb  naive_bayes_classifier.py
