[tool.poetry]
name = "MisinfoWatcher"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
BASC-py4chan = "^0.6.5"
py8chan = "^0.1.1"
newspaper3k = "^0.2.8"
fastapi = "^0.61.2"
uvicorn = "^0.12.3"
pydantic = "^1.7.2"
torch = "^1.7.0"
transformers = "^3.5.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
